# mcp-cartographer

./: README.md  pyproject.toml  server.py
cartographer/: __init__.py  cartographer.py  cli.py  git_insights.py  graph.py  models.py  scanner.py  summarizer.py
cartographer/analyzers/: __init__.py  generic_analyzer.py  python_analyzer.py
cartographer/renderers/: llm.py  terminal.py
drift/: __init__.py  checker.py  cli.py  parser.py  usage.py
ghost/: __init__.py  analyzer.py  cli.py  definitions.py  models.py  references.py  renderer.py  scanner.py
myth/: archaeologist.py  cli.py  renderer.py
sentinel/: cli.py  metrics.py  reporter.py  watcher.py
tests/: test_analyzer.py  test_cartographer.py  test_ghost.py  test_scanner.py
